[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsp-network-scanner"
version = "2.5.0"
description = "Scan networks for RTSP cameras, test streams, discover channels"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Sanjay H", email = "contact@sanjayhona.com.np"}
]
keywords = ["rtsp", "scanner", "network", "camera", "security", "debug"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Networking",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
rtsp-network-scanner = "rtsp_scanner.cli:main"

[project.urls]
Homepage = "https://github.com/sssanjaya/rtsp-network-scanner"
"Bug Reports" = "https://github.com/sssanjaya/rtsp-network-scanner/issues"
"Source" = "https://github.com/sssanjaya/rtsp-network-scanner"

[tool.setuptools]
packages = ["rtsp_scanner", "rtsp_scanner.core", "rtsp_scanner.utils"]
